k8s/messaging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging
  namespace: jk-three-tier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging
  template:
    metadata:
      labels:
        app: messaging
    spec:
      containers:
        - name: messaging
          image: jk-messaging:5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 8081
              name: grpc
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: messaging
  namespace: jk-three-tier
spec:
  type: ClusterIP
  selector:
    app: messaging
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: grpc
      port: 8081
      targetPort: 8081
