k8s/offer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: offer
  namespace: jk-three-tier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: offer
  template:
    metadata:
      labels:
        app: offer
        environment: local
        service: offer
        version: local
    spec:
      containers:
        - name: offer
          image: jk-offer:v7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 8081
              name: grpc
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: offer
  namespace: jk-three-tier
spec:
  type: ClusterIP
  selector:
    app: offer
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: grpc
      port: 8081
      targetPort: 8081
